# easytex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  LICENSE  Makefile  README.md  SECURITY.md  build.rs  docker-compose.yaml  easytex.prod.yaml  easytex.yaml  package-lock.json  package.json  playwright.config.ts  playwright.screenshot.config.ts
.github/workflows/: ci.yml  release.yml
example/demo/: EasyTex.toml  main.tex
frontend/: easytex.yaml  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: generate-types.js
frontend/src/: App.tsx  client.ts  index.css
frontend/src/bindings/: AdminMetricsResponse.ts  BuildArtifactResponse.ts  ConfigResponse.ts  DiagnosticEvent.ts  FileListResponse.ts  FileResponse.ts  LintResponse.ts  PreviewResponse.ts  ProjectStatusResponse.ts  ProjectsResponse.ts  RuntimeCapabilities.ts  ServerEvent.ts  SynctexEditResponse.ts  SynctexViewResponse.ts
screenshot/: readme.spec.ts
src/: artifacts.rs  builder.rs  capabilities.rs  config.rs  dto.rs  errors.rs  events.rs  frontend_assets.rs  fs_safety.rs  handlers.rs  main.rs  process.rs  state.rs  utils.rs
tests/: .easytex-history.json  admin-auth.spec.ts  api.artifacts.spec.ts  api.config.spec.ts  api.files.spec.ts  api.projects.spec.ts  api.sse.spec.ts  e2e-helpers.ts  easytex.yaml  granular.spec.ts  security.spec.ts  ui.editor-config.spec.ts  ultimate.spec.ts
tests/demo/: EasyTex.toml  main.tex
xtask/: Cargo.toml
xtask/src/: main.rs
