[package]
name = "easytex"
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace]
members = [".", "xtask"]
resolver = "2"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat"] }
toml = "0.8"
async-stream = "0.3"
notify = "6"
libc = "0.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-util = { version = "0.7.18", features = ["io"] }
serde_yaml = "0.9"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[features]
default = ["embed-ui"]
embed-ui = []
latexmk = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
anyhow = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
